--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,29 @@
 }
 
 .body {
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
+}
+
+.root {
+  color: #2196f3;
 }
 
 /*----------- Header-----------------*/
+
 .logo {
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-
   color: #2196f3;
 }
+
 .logo-color {
   color: black;
 }
+
 .menu-link {
   font-weight: 500;
   font-size: 14px;
@@ -28,34 +33,30 @@
   letter-spacing: 0.02em;
   cursor: pointer;
   text-decoration: none;
-
   color: #212121;
 }
 
-.menu-link:hover,
-.menu-link:focus {
+.menu-link:hover, .menu-link:focus {
   color: #2196f3;
 }
+
 .menu-link.current {
   color: #2196f3;
   cursor: pointer;
   text-decoration: none;
 }
 
-.mail-link,
-.tel-link {
+.mail-link, .tel-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
-
   color: #757575;
 }
 
-.mail-link:hover,
-.mail-link:focus {
+.mail-link:hover, .mail-link:focus {
   color: #2196f3;
 }
 
@@ -65,8 +66,7 @@
   cursor: pointer;
 }
 
-.tel-link:hover,
-.tel-link:focus {
+.tel-link:hover, .tel-link:focus {
   color: #2196f3;
 }
 
@@ -74,48 +74,46 @@
 
 /*-----------Hero-----------------*/
 
+.section-hero {
+  background: #2F303A;
+  text-align: center;
+}
+
 .hero-title {
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
-
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  /*color: #FFFFFF;
-*/
+  color: #FFFFFF;
 }
 
 .pop-up-btn {
-  font-style: normal;
-  font-weight: bold;
+  font-style: inherit;
+  font-weight: 700;
   font-size: 16px;
   line-height: 30px;
-  /* identical to box height, or 187% */
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-
+  letter-spacing: 0, 6em;
   color: #ffffff;
-
   background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  cursor: pointer;
+}
+
+.pop-up-btn {
+  display: inline-block;
 }
 
 /*-----------END HERO-----------------*/
 
 /*-----------Advantage-----------------*/
+
 .adv-title {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
   color: #212121;
 }
 
@@ -124,11 +122,10 @@
   font-size: 14px;
   line-height: 24px;
   /* or 171% */
-
   letter-spacing: 0.03em;
-
   color: #757575;
 }
+
 /*-----------END Advantage-----------------*/
 
 /*-----------What we do-----------------*/
@@ -139,13 +136,16 @@
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #212121;
 }
 
 /*-----------END What we do-----------------*/
 
 /*-----------Our team-----------------*/
+
+.our-team {
+  background-color: #F5F4FA;
+}
 
 .our-team-title {
   font-style: normal;
@@ -161,8 +161,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
-
-  /*text-align: center;*/
+  text-align: center;
   letter-spacing: 0.03em;
 }
 
@@ -171,10 +170,8 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 19px;
-
-  /*text-align: center;*/
+  text-align: center;
   letter-spacing: 0.03em;
-
   color: #757575;
 }
 
@@ -188,24 +185,22 @@
   font-size: 26px;
   line-height: 31px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-
   color: #2196f3;
 }
+
 .logo-color-footer {
   color: rgb(252, 248, 248);
 }
+
 .map {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   /* or 171% */
-
   letter-spacing: 0.03em;
   text-decoration: none;
-
   color: #ffffff;
 }
 
@@ -215,38 +210,52 @@
   font-size: 14px;
   line-height: 24px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-  color: #757575;
+  color: rgba(255, 255, 255, 0.6);
 }
 
-.mail-footer:hover,
-.mail-footer:focus {
+.mail-footer:hover, .mail-footer:focus {
   color: #2196f3;
 }
 
 .footer {
   background: #2f303a;
 }
+
+.tel-link-footer {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.tel-link-footer:hover, .tel-link-footer:focus {
+  color: #2196f3;
+}
+
 /*---------------- END-Footer-------------------*/
 
 /*Portfolio*/
 
 /*----------- Header-----------------*/
+
 .logo {
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-
   color: #2196f3;
 }
+
 .logo-color {
   color: rgb(0, 0, 0);
 }
+
 .menu-link {
   font-weight: 500;
   font-size: 14px;
@@ -254,33 +263,29 @@
   letter-spacing: 0.02em;
   cursor: pointer;
   text-decoration: none;
-
   color: #212121;
 }
 
-.menu-link:hover,
-.menu-link:focus {
+.menu-link:hover, .menu-link:focus {
   color: #2196f3;
 }
+
 .menu-link.current {
   color: #2196f3;
   cursor: pointer;
   text-decoration: none;
 }
 
-.mail-link,
-.tel-link {
+.mail-link, .tel-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
-
   color: #757575;
 }
 
-.mail-link:hover,
-.mail-link:focus {
+.mail-link:hover, .mail-link:focus {
   color: #2196f3;
 }
 
@@ -289,8 +294,7 @@
   text-decoration: none;
 }
 
-.tel-link:hover,
-.tel-link:focus {
+.tel-link:hover, .tel-link:focus {
   color: #2196f3;
 }
 
@@ -304,36 +308,36 @@
   font-size: 16px;
   line-height: 30px;
   /* identical to box height, or 187% */
-
   display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-
   color: #ffffff;
-
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
 }
+
 .filter-btn {
-  font-style: normal;
+  font-style: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
   /* identical to box height, or 187% */
-
   display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-
   color: #020202;
-
   background: #f5f4fa;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+.filter-btn:hover, .filter-btn:focus {
+  background-color: #2196F3;
+  color: #FFFFFF;
 }
 
 /*-----------End Filter----------------*/
@@ -354,14 +358,17 @@
   font-size: 16px;
   line-height: 30px;
   /* identical to box height, or 187% */
-
   letter-spacing: 0.03em;
-
   color: #757575;
 }
+
 /*-----------End Portfolio----------------*/
 
 /*----------------Footer-------------------*/
+
+.footer {
+  background: #2f303a;
+}
 
 .logo {
   font-family: Raleway;
@@ -369,24 +376,22 @@
   font-size: 26px;
   line-height: 31px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-
   color: #2196f3;
 }
+
 .logo-color-footer {
   color: rgb(252, 248, 248);
 }
+
 .map {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   /* or 171% */
-
   letter-spacing: 0.03em;
   text-decoration: none;
-
   *color: #ffffff;
 }
 
@@ -396,17 +401,26 @@
   font-size: 14px;
   line-height: 24px;
   text-decoration: none;
-
   letter-spacing: 0.03em;
-  color: #757575;
+  color: rgba(255, 255, 255, 0.6)
 }
 
-.mail-footer:hover,
-.mail-footer:focus {
+.mail-footer:hover, .mail-footer:focus {
   color: #2196f3;
 }
 
-.footer {
-  background: #2f303a;
+.tel-link-footer {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
 }
+
+.tel-link-footer:hover, .tel-link-footer:focus {
+  color: #2196f3;
+}
+
 /*---------------- END-Footer-------------------*/
