--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
 }
 
 .menu-link {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -79,7 +80,9 @@
   text-align: center;
 }
 
-.hero-title {
+.hero-title
+ {
+  font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -90,7 +93,7 @@
 }
 
 .pop-up-btn {
-  font-style: inherit;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
@@ -109,6 +112,7 @@
 /*-----------Advantage-----------------*/
 
 .adv-title {
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -131,6 +135,7 @@
 /*-----------What we do-----------------*/
 
 .what-we-do-title {
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
@@ -148,6 +153,7 @@
 }
 
 .our-team-title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
@@ -157,6 +163,7 @@
 }
 
 .teammate-name {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -166,7 +173,7 @@
 }
 
 .teammate-position {
-  font-style: normal;
+  font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 19px;
@@ -194,6 +201,7 @@
 }
 
 .map {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -223,6 +231,7 @@
 }
 
 .tel-link-footer {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -257,6 +266,7 @@
 }
 
 .menu-link {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -320,7 +330,7 @@
 }
 
 .filter-btn {
-  font-style: inherit;
+  font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
@@ -345,6 +355,7 @@
 /*-----------Portfolio----------------*/
 
 .project-name {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -385,6 +396,7 @@
 }
 
 .map {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -396,6 +408,7 @@
 }
 
 .mail-footer {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -410,6 +423,7 @@
 }
 
 .tel-link-footer {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
